# Plugin_WebUI

./: CMakeLists.txt  COPYING  README.md  args.c  args.h  commands.c  commands.h  commands_v2.c  commands_v2.h  commands_v3.c  commands_v3.h  filedata.h  flashfs.c  flashfs.h  fs_embedded.c  fs_embedded.h  fs_handlers.c  fs_handlers.h  login.c  login.h  sdcard.c  sdcard.h  sdfs.c  sdfs.h  server.c  server.h  webui.h
lwIP patch/: README.md
lwIP patch/iMXRT1062/: lwipopts.h
www/v3/: preferences.json
